# AI_Stroke_Diagnosis

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  main.cpp
DataExploration/: CMakeLists.txt
DataExploration/stroke_mri/: CMakeLists.txt
DataExploration/stroke_mri/app/: CMakeLists.txt  README.md
DataExploration/stroke_mri/app/src/: main.cpp
DataPipeline/: README.md
SlicerAIStrokeDiagnosis/: CMakeLists.txt  CTestConfig.cmake  README.md  conanfile.py
SlicerAIStrokeDiagnosis/DiagnoseStrokePy/: CMakeLists.txt  DiagnoseStrokePy.py
SlicerAIStrokeDiagnosis/GenerateStrokeDataPy/: CMakeLists.txt  GenerateStrokeDataPy.py
SlicerAIStrokeDiagnosis/LoadDataPyZmq/: CMakeLists.txt  LoadDataPyZmq.py
SlicerAIStrokeDiagnosis/LoadDataZmq/: CMakeLists.txt  qSlicerLoadDataZmqModule.cxx  qSlicerLoadDataZmqModule.h
SlicerAIStrokeDiagnosis/LoadDataZmq/Logic/: vtkSlicerLoadDataZmqLogic.cxx  vtkSlicerLoadDataZmqLogic.h
SlicerAIStrokeDiagnosis/LoadDataZmq/MRML/: vtkMRMLMarkupsTestLineNode.h
SlicerAIStrokeDiagnosis/LoadDataZmq/VTKWidgets/: vtkSlicerTestLineRepresentation2D.h  vtkSlicerTestLineRepresentation3D.h  vtkSlicerTestLineWidget.h
SlicerAIStrokeDiagnosis/LoadDataZmq/Widgets/: qMRMLMarkupsTestLineWidget.h
SlicerAIStrokeDiagnosis/StrokeZmqPubSub/: CMakeLists.txt  qSlicerStrokeZmqPubSubModule.cxx  qSlicerStrokeZmqPubSubModule.h  qSlicerStrokeZmqPubSubModuleWidget.cxx  qSlicerStrokeZmqPubSubModuleWidget.h
SlicerAIStrokeDiagnosis/StrokeZmqPubSub/Logic/: vtkSlicerStrokeZmqPubSubLogic.cxx  vtkSlicerStrokeZmqPubSubLogic.h
SlicerAIStrokeDiagnosis/StrokeZmqPubSub/Resources/: qSlicerStrokeZmqPubSubModule.qrc
SlicerAIStrokeDiagnosis/StrokeZmqPubSub/Widgets/: qSlicerStrokeZmqPubSubFooBarWidget.cxx  qSlicerStrokeZmqPubSubFooBarWidget.h
SlicerAIStrokeDiagnosis/StrokeZmqPubSub/ZmqLite/: zmqlClientSocket.h  zmqlServerSocket.h
SlicerAIStrokeDiagnosis/StrokeZmqPubSub/proto/: zmqMedicalImageMessage.proto  zmqTransformMessage.proto
SlicerAIStrokeDiagnosis/VisualizeStrokeAnalyticsPy/: CMakeLists.txt  VisualizeStrokeAnalyticsPy.py
conan_recipes/: README.md
environments/data_exploration/: environment.yml
profiles/: debug-linux  release-linux
test/: CMakeLists.txt  TestMRIDataLoader.cpp
(+80 files in other folders)
